[B]Version 1.3.0[/B]

- updated streaming URL
- added screen dim feature

[B]Version 1.2.0[/B]

- updated streaming URL

[B]Version 1.1.0[/B]

- updated for latest Kodi

[B]Version 1.0.0[/B]

- initial version