@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.audio.rainymood.com" name="Rainymood.com" version="1.3.0" provider-name="cdwertmann">
+<addon id="plugin.audio.rainymood.com" name="Rainymood.com" version="1.4.0" provider-name="cdwertmann">
     <requires>
         <import addon="xbmc.python" version="2.1.0"/>
     </requires>
